--- a/app/templates/posts/comment_form.html
+++ b/app/templates/posts/comment_form.html
@@ -14,7 +14,7 @@
     <div class="row">
         <fieldset>
             <div class="three columns offset-by-three">
-                <input id="post" type="submit" value="Post"
+                <input id="post" type="submit" value="{{ _('Post') }}"
                     class="button button-primary u-mobile-fixed-bottom">
             </div>
             <div class="three columns">
