--- a/app/templates/admin/index.html
+++ b/app/templates/admin/index.html
@@ -4,10 +4,16 @@
 <div class="container u-add-margin-top">
 	<div class="row">
 		<div class="six columns offset-by-three">
-			<h2>Admin</h2>
+			<h2>
+				{{ _('Admin') }}
+			</h2>
 			<ul>
-				<li><a href="{{ url_for('.admin_user_list') }}">Manage users</a></li>
-				<li><a href="{{ url_for('.admin_page_list') }}">Manage pages</a></li>
+				<li><a href="{{ url_for('.admin_user_list') }}">
+					{{ _('Manage users') }}
+				</a></li>
+				<li><a href="{{ url_for('.admin_page_list') }}">
+					{{ _('Manage pages') }}
+				</a></li>
 			</ul>
 		</div>
 	</div>
