--- a/app/templates/causes/action_form.html
+++ b/app/templates/causes/action_form.html
@@ -39,7 +39,7 @@
         <div class="row">
             <fieldset>
                 <div class="three columns offset-by-three">
-                    <input id="save" type="submit" value="Save"
+                    <input id="save" type="submit" value="{{ _('Save') }}"
                         class="button button-primary u-mobile-fixed-bottom">
                 </div>
                 <div class="three columns">
