--- a/app/templates/users/edit.html
+++ b/app/templates/users/edit.html
@@ -41,6 +41,7 @@
                 ) }}
                 {{ render_field(form.employer, class='u-full-width') }}
                 {{ render_field(form.description, class='u-full-width') }}
+                {{ render_field(form.locale, class='u-full-width') }}
             </fieldset>
         </div>
         <div class="six columns">
