--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -7,7 +7,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Solid</title>
+    <title>{% block title %}Solid{% endblock %}</title>
 
     <link rel="icon" type="image/png" href="{{ url_for('static', filename='Skeleton/images/favicon.png') }}">
    
