--- a/app/templates/causes/cause.html
+++ b/app/templates/causes/cause.html
@@ -1,6 +1,8 @@
 {% extends "base.html" %}
 {% set active_page = "dashboard" %}
 
+{% block title %}{{ cause.title }} - {{ super() }}{% endblock %}
+
 {% block styles %}
 <style>
 .hero,
