--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -47,13 +47,11 @@
             <div class="row">
                 <div class="twelve columns">
 
-                    <!-- Logo -->
                     <a class="u-link-color-override" href="{{ url_for('index') }}">
                         <h4 class="title u-pull-left"><strong>SOLID</strong></h4>
                     </a>
                     
-                    <!-- Language picker -->
-                    <div id="lang-dropdown" class="dropdown u-pull-right u-add-margin-left">
+                    <div id="lang-dropdown" class="dropdown u-pull-right">
                         <button class="button dropdown-button">
                             <span class="button-text-with-img">
                                 {% if session['lang_code'] == 'en' %}
@@ -79,7 +77,6 @@
                     </div>-->
                     
                     {% if current_user.is_admin %}
-                    <!-- Admin tools -->
                     <a href="{{ url_for('admin.admin') }}" 
                         title="Admin" 
                         class="button u-pull-right u-add-margin-left">
@@ -88,20 +85,17 @@
                     {% endif %}
                     
                     {% if active_page == "login" %}
-                    <!-- If on login page, show only signup button -->
                         <a href="{{ url_for('users.signup') }}" title="Sign Up"
                             class="button u-pull-right">
                             {{ _('Sign Up') }}
                         </a>
                     {% elif active_page == "signup" %}
-                    <!-- If on signupd page, show login button only -->
                         <a href="{{ url_for('users.login') }}" title="Log In" class="button u-pull-right">
                             <span class="button-text-with-img">Logout</span>
                             <img src="{{ url_for('static', filename='open-iconic/png/account-login-2x.png') }}">
                         </a>
                     {% else %}
                         {% if current_user.is_authenticated %} 
-                            <!-- Show logout button -->
                             <a href="{{ url_for('users.logout') }}" title="Log Out" class="button u-pull-right">
                                 <img src="{{ url_for('static', filename='open-iconic/png/account-logout-2x.png') }}">
                             </a>
@@ -112,7 +106,6 @@
                                 </a>
                             </span>
                         {% else %}
-                            <!-- Show both Login and Signup buttons at the same time -->
                             <a href="{{ url_for('users.login') }}" 
                                 title="{{ _('Log In') }}" 
                                 class="button u-add-margin-left u-pull-right">
